0028580: Misprint in IntPatch_WLineTool.cxx file

Code correction.